<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:layout_weight="1.00"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >
            
            <TextView
	            android:id="@+id/textView2"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:text="@string/sender"
	            android:layout_marginTop="10dp"
	        	android:layout_marginLeft="5dp"
	            android:textAppearance="?android:attr/textAppearanceLarge" />

            <TextView
                android:id="@+id/name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/name"
                android:layout_marginTop="10dp"
        		android:layout_marginLeft="5dp"
            	android:textAppearance="?android:attr/textAppearanceLarge" />

        </LinearLayout>

        
        
        <TextView
	        android:id="@+id/textView1"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/plaintext_desc"
	        android:layout_marginTop="10dp"
	        android:layout_marginLeft="5dp"
	        android:textAppearance="?android:attr/textAppearanceLarge" />

       <ImageView
	    android:src="@drawable/black_white_gradient"
	    android:contentDescription="@string/spacer"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:paddingLeft="5dp"
	    android:paddingRight="5dp"
	    android:paddingBottom="5dp"
	    android:paddingTop="5dp" />
       
    	<TextView
	        android:id="@+id/plaintext"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/plaintext"
	        android:layout_marginTop="10dp"
	        android:layout_marginLeft="5dp"
	        android:layout_marginRight="5dp"
	        android:textAppearance="?android:attr/textAppearanceMedium" />
    	
    </LinearLayout>

    

    <Button
        android:id="@+id/goto_encrypt"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/goto_encrypt" />

</LinearLayout>
