<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical" >
    
    <TextView
        android:id="@+id/contactsText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="5dp"
        android:paddingLeft="5dp"
        android:text="@string/contacts"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <Button
        android:id="@+id/addContact"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/add_contact" />

    <ImageView
        android:id="@+id/keyQR"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/desc"
       	android:visibility="gone"/>

</LinearLayout>