<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/mainLayout"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <Spinner
        android:id="@+id/personSpinner"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" />
     
        <ScrollView
            android:id="@+id/scrollView1"
            android:layout_width="match_parent"
            android:layout_height="0dip"
            android:layout_weight="0.56" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dip"
                android:orientation="vertical" >
                
                <TextView
		            android:id="@+id/textView1"
		            android:layout_width="wrap_content"
		            android:layout_height="wrap_content"
		            android:layout_marginLeft="5dp"
		            android:text="@string/cipher_text_show" 
		            android:textAppearance="?android:attr/textAppearanceMedium"/>

                
           <TextView
	        android:id="@+id/chiperText"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_marginTop="10dp"
	        android:layout_marginLeft="5dp"
	        android:layout_marginRight="5dp"
	        android:text="@string/cipher_not_found" 
	        android:textAppearance="?android:attr/textAppearanceMedium"/>
        
    	</LinearLayout>
        </ScrollView>
  

    <Button
        android:id="@+id/decrypt"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:enabled="false"
        android:text="@string/decrypt" />

</LinearLayout>